# aisd_lab_1

./: .gitignore  CMakeLists.txt
console/: console.cc
include/polynomial/: polynomial.h
